--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,3 +1,9 @@
+{% if user.is_active %}
+	{{ user.email }}
+	<a href="{% url 'polls:logout' %}">Logout</a><p>
+{% else %}
+	<a href="{% url 'polls:login' %}">Login</a><p>
+{% endif %}
 <form method="get" action="{% url 'polls:search_results'%}"" class="navbar-form pull-right">
 	<input type="text" id="searchBox" class="input-medium search-query" name="q" placeholder="Search for polls...">
 	<input type="submit" class="btn" value="Search" >
@@ -34,4 +40,3 @@
 {% else %}
 	<h4>No polls are available.</h4>
 {% endif %}
-	
